--- a/template.yaml
+++ b/template.yaml
@@ -13,11 +13,11 @@ Globals:
         arn:aws:lambda:eu-north-1:017000801446:layer:AWSLambdaPowertoolsPythonV2:69
 
 Resources:
-  Gigs:
+  GigsDbCRUD:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: functions/gigs/
-      Description: API Gateway CRUD for DynamoDB gigs table
+      CodeUri: functions/gigs_db_crud/
+      Description: API Gateway CRUD for DynamoDB table gigs
       Architectures:
         - x86_64
       Environment:
@@ -35,7 +35,7 @@ Resources:
                 - dynamodb:UpdateItem
                 - dynamodb:Query
                 - dynamodb:GetRecords
-              Resource: arn:aws:dynamodb:eu-north-1:891376983144:table/*
+              Resource: arn:aws:dynamodb:eu-north-1:891376983144:table/gigs
             - Sid: CloudWatchCreateLogsPolicy
               Effect: Allow
               Action:
@@ -48,7 +48,7 @@ Resources:
                 - logs:PutLogEvents
               Resource:
                 - >-
-                  arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/gigs:*
+                  arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/gigs_db_crud:*
       Events:
         CreateGig:
           Type: Api
@@ -73,56 +73,143 @@ Resources:
       EventInvokeConfig:
         MaximumEventAgeInSeconds: 21600
         MaximumRetryAttempts: 2
-#  UpcomingPlaylist:
-#    Type: AWS::Serverless::Function
-#    Properties:
-#      CodeUri: functions/upcoming_playlist/
-#      Description: Updates upcoming gigs playlist in response to gigs table updates
-#      Architectures:
-#        - x86_64
-#      Environment:
-#        Variables:
-#          PLAYLIST_ID: 4oDqbIVmOGD1wqT3Kh7lbQ
-#      Policies:
-#      - Statement:
-#        - Sid: DynamoDBStreamsPolicy
-#          Effect: Allow
-#          Action:
-#            - dynamodb:ListStreams
-#            - dynamodb:DescribeStream
-#            - dynamodb:GetShardIterator
-#          Resource: arn:aws:dynamodb:eu-north-1:891376983144:table/*
-#        - Sid: CloudWatchCreateLogsPolicy
-#          Effect: Allow
-#          Action:
-#            - logs:CreateLogGroup
-#          Resource: arn:aws:logs:eu-north-1:891376983144:*
-#        - Sid: CloudWatchWriteLogsPolicy
-#          Effect: Allow
-#          Action:
-#            - logs:CreateLogStream
-#            - logs:PutLogEvents
-#          Resource:
-#            - >-
-#              arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/upcoming_playlist:*
-#        - Sid: SSMWriteParameterPolicy
-#          Effect: Allow
-#          Action:
-#          - ssm:GetParameters
-#          - ssm:GetParameter
-#          - ssm:DescribeParameters
-#          - ssm:PutParameter
-#          Resource: '*' # FIXME: wildcard resource
-#      Events:
-#        Gigs:
-#          Type: DynamoDB
-#          Properties:
-#            Stream:
-#              Fn::GetAtt:
-#                - Table1
-#                - StreamArn
-#            StartingPosition: LATEST
-#            BatchSize: 100
-#      EventInvokeConfig:
-#        MaximumEventAgeInSeconds: 21600
-#        MaximumRetryAttempts: 2
+  AddGigToUpcomingPlaylist:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: functions/add_gig_to_upcoming_playlist/
+      Description: Updates upcoming playlist in response to gigs DynamoDB table updates
+      Architectures:
+        - x86_64
+      Environment:
+        Variables:
+          REMOVE_LAMBDA_ARN: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+          SCHEDULER_ROLE_ARN: !GetAtt SchedulerRole.Arn
+      Policies:
+      - Statement:
+        - Sid: DynamoDBStreamsPolicy
+          Effect: Allow
+          Action:
+            - dynamodb:ListStreams
+            - dynamodb:DescribeStream
+            - dynamodb:GetShardIterator
+          Resource: arn:aws:dynamodb:eu-north-1:891376983144:table/gigs
+        - Sid: CloudWatchCreateLogsPolicy
+          Effect: Allow
+          Action:
+            - logs:CreateLogGroup
+          Resource: arn:aws:logs:eu-north-1:891376983144:*
+        - Sid: CloudWatchWriteLogsPolicy
+          Effect: Allow
+          Action:
+            - logs:CreateLogStream
+            - logs:PutLogEvents
+          Resource:
+            - >-
+              arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/add_gig_to_upcoming_playlist:*
+        - Sid: SSMWriteParameterPolicy
+          Effect: Allow
+          Action:
+          - ssm:GetParameters
+          - ssm:GetParameter
+          - ssm:DescribeParameters
+          - ssm:PutParameter
+          Resource:
+            - >-
+              arn:aws:ssm:eu-north-1:891376983144:parameter/spotify/*
+        - Sid: EventBridgeSchedulerCreatePolicy
+          Effect: Allow
+          Action:
+            - scheduler:CreateSchedule
+          Resource:
+            - >-
+              arn:aws:scheduler:eu-north-1:891376983144:schedule/*
+        - Sid: EventBridgeSchedulerPassRole
+          Effect: Allow
+          Action:
+            - iam:PassRole
+          Resource:
+            - !GetAtt SchedulerRole.Arn
+      Events:
+        Gigs:
+          Type: DynamoDB
+          Properties:
+            Stream: arn:aws:dynamodb:eu-north-1:891376983144:table/gigs/stream/2024-05-10T15:37:36.998
+            StartingPosition: LATEST
+            BatchSize: 10
+            FilterCriteria:
+              Filters:
+                - Pattern: '{ "eventName": ["INSERT", "MODIFY"], "dynamodb": { "Keys": { "id": { "S": [{ "prefix": "GIG" }] } } } }'
+      EventInvokeConfig:
+        MaximumEventAgeInSeconds: 21600
+        MaximumRetryAttempts: 2
+      Layers:
+        - !Ref SharedLibs
+  SharedLibs:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: GigPlaylistsSharedLibs
+      Description: Classes used across multiple Lambdas in the gig-playlists project
+      ContentUri: libs/
+      CompatibleRuntimes:
+        - python3.10
+      RetentionPolicy: Retain
+  RemoveGigFromUpcomingPlaylist:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: functions/remove_gig_from_upcoming_playlist/
+      Description: Removes tracks from upcoming playlist in response to scheduled events
+      Architectures:
+        - x86_64
+      Policies:
+        - Statement:
+            - Sid: DynamoDBReadPolicy
+              Effect: Allow
+              Action:
+                - dynamodb:Query
+                - dynamodb:GetItem
+              Resource: arn:aws:dynamodb:eu-north-1:891376983144:table/gigs
+            - Sid: CloudWatchCreateLogsPolicy
+              Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+              Resource: arn:aws:logs:eu-north-1:891376983144:*
+            - Sid: CloudWatchWriteLogsPolicy
+              Effect: Allow
+              Action:
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource:
+                - >-
+                  arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/remove_gig_from_upcoming_playlist:*
+            - Sid: SSMWriteParameterPolicy
+              Effect: Allow
+              Action:
+                - ssm:GetParameters
+                - ssm:GetParameter
+                - ssm:DescribeParameters
+                - ssm:PutParameter
+              Resource:
+                - >-
+                  arn:aws:ssm:eu-north-1:891376983144:parameter/spotify/*
+      Layers:
+        - !Ref SharedLibs
+  SchedulerRole:
+    Type: AWS::IAM::Role
+    Properties:
+      Description: Role for scheduling playlist delete lambda
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - scheduler.amazonaws.com
+            Action: "sts:AssumeRole"
+      Policies:
+        - PolicyName: InvokeRemoveGigFunction
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action: lambda:InvokeFunction
+                Resource: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
