--- a/template.yaml
+++ b/template.yaml
@@ -146,15 +146,6 @@ Resources:
         MaximumRetryAttempts: 2
       Layers:
         - !Ref SharedLibs
-  SharedLibs:
-    Type: AWS::Serverless::LayerVersion
-    Properties:
-      LayerName: GigPlaylistsSharedLibs
-      Description: Classes used across multiple Lambdas in the gig-playlists project
-      ContentUri: libs/
-      CompatibleRuntimes:
-        - python3.10
-      RetentionPolicy: Retain
   RemoveGigFromUpcomingPlaylist:
     Type: AWS::Serverless::Function
     Properties:
@@ -215,3 +206,71 @@ Resources:
               - Effect: Allow
                 Action: lambda:InvokeFunction
                 Resource: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+  UpcomingPlaylistRecon:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: functions/upcoming_playlist_recon/
+      Description: Reconciles a user's upcoming playlist with the gigs database table
+      Architectures:
+        - x86_64
+      Environment:
+        Variables:
+          REMOVE_LAMBDA_ARN: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+          SCHEDULER_ROLE_ARN: !GetAtt SchedulerRole.Arn
+          TABLE_NAME: gigs
+      Policies:
+      - Statement:
+        - Sid: DynamoDBReadPolicy
+          Effect: Allow
+          Action:
+            - dynamodb:Query
+          Resource:
+            - arn:aws:dynamodb:eu-north-1:891376983144:table/gigs
+            - arn:aws:dynamodb:eu-north-1:891376983144:table/gigs/index/userId-date-index
+        - Sid: CloudWatchCreateLogsPolicy
+          Effect: Allow
+          Action:
+            - logs:CreateLogGroup
+          Resource: arn:aws:logs:eu-north-1:891376983144:*
+        - Sid: CloudWatchWriteLogsPolicy
+          Effect: Allow
+          Action:
+            - logs:CreateLogStream
+            - logs:PutLogEvents
+          Resource:
+            - >-
+              arn:aws:logs:eu-north-1:891376983144:log-group:/aws/lambda/upcoming_playlist_recon:*
+        - Sid: SSMWriteParameterPolicy
+          Effect: Allow
+          Action:
+          - ssm:GetParameters
+          - ssm:GetParameter
+          - ssm:DescribeParameters
+          - ssm:PutParameter
+          Resource:
+            - >-
+              arn:aws:ssm:eu-north-1:891376983144:parameter/spotify/*
+        - Sid: EventBridgeSchedulerCreatePolicy
+          Effect: Allow
+          Action:
+            - scheduler:CreateSchedule
+          Resource:
+            - >-
+              arn:aws:scheduler:eu-north-1:891376983144:schedule/*
+        - Sid: EventBridgeSchedulerPassRole
+          Effect: Allow
+          Action:
+            - iam:PassRole
+          Resource:
+            - !GetAtt SchedulerRole.Arn
+      Layers:
+        - !Ref SharedLibs
+  SharedLibs:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: GigPlaylistsSharedLibs
+      Description: Classes used across multiple Lambdas in the gig-playlists project
+      ContentUri: libs/
+      CompatibleRuntimes:
+        - python3.10
+      RetentionPolicy: Retain
