--- a/template.yaml
+++ b/template.yaml
@@ -277,5 +277,8 @@ Resources:
       Description: Classes used across multiple Lambdas in the gig-playlists project
       ContentUri: libs/
       CompatibleRuntimes:
-        - python3.10
+        - python3.12
       RetentionPolicy: Retain
+Outputs:
+  AddGigToUpcomingPlaylistFunctionArn:
+    Value: !GetAtt AddGigToUpcomingPlaylist.Arn
