--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,6 +3,6 @@ version = 0.1
 stack_name = "gig-playlists"
 resolve_s3 = true
 s3_prefix = "gig-playlists"
-region = "eu-north-1"
+region = "eu-west-2"
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
