--- a/template.yaml
+++ b/template.yaml
@@ -45,6 +45,18 @@ Resources:
               - venue
               - spotifyArtistId
             ProjectionType: INCLUDE
+        - IndexName: userId-id-index
+          KeySchema:
+            - AttributeName: userId
+              KeyType: HASH
+            - AttributeName: id
+              KeyType: RANGE
+          Projection:
+            NonKeyAttributes:
+              - artist
+              - venue
+              - spotifyArtistId
+            ProjectionType: INCLUDE
       StreamSpecification:
         StreamViewType: NEW_AND_OLD_IMAGES
 
@@ -55,9 +67,19 @@ Resources:
       Description: API Gateway for calling GigsDbCRUD lambda function
       Auth:
         DefaultAuthorizer: GigsTokenAuthorizer
+        AddDefaultAuthorizerToCorsPreflight: false
         Authorizers:
           GigsTokenAuthorizer:
             FunctionArn: !GetAtt GigsDbAuthFunction.Arn
+      GatewayResponses:
+          DEFAULT_4XX:
+            ResponseParameters:
+              Headers:
+                Access-Control-Allow-Origin: "'http://localhost:4200'"
+      Cors: # This only enables CORS for 200 responses
+        AllowMethods: "'POST,GET,OPTIONS'"
+        AllowOrigin: "'http://localhost:4200'"
+        AllowHeaders: "'Authorization,Content-Type'"
 
   GigsDbAuthFunction:
     Type: AWS::Serverless::Function
@@ -74,7 +96,6 @@ Resources:
               Resource:
                     - >-
                       arn:aws:ssm:eu-west-2:891376983144:parameter/gigs/crud_api_token
-
 
   GigsDbCRUD:
     Type: AWS::Serverless::Function
@@ -397,8 +418,8 @@ Resources:
             - HEAD
             - OPTIONS
           TargetOriginId: S3Origin
-          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6 # CachingOptimized managed policy
-          OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf # CORS-S3Origin managed policy
+          CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad # CachingDisabled managed policy
+          OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3 # AllViewer managed policy
           ResponseHeadersPolicyId: eaab4381-ed33-4a86-88ca-d9558dc6cd63 # CORS-with-preflight-and-SecurityHeadersPolicy managed policy
           ViewerProtocolPolicy: redirect-to-https
         CustomErrorResponses:
