--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
+    - name: Set up SAM CLI
+      uses: aws-actions/setup-sam@v2
+    - name: Set up AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -34,3 +42,6 @@ jobs:
     - name: Unit test with pytest
       run: |
         pytest tests/unit
+    - name: Lint SAM template
+      run: |
+        sam validate --lint
