temporarily break template to test github action

--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,7 @@ Globals:
 
 Resources:
   GigsTable:
+    Break: this template
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
