--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Set up SAM CLI
         uses: aws-actions/setup-sam@v2
       - name: Set up AWS credentials
@@ -32,3 +36,5 @@ jobs:
       # Prevent prompts and failure when the stack is unchanged
       - name: Deploy
         run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+      - name: Integration test
+        run: pytest tests/integration
