--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-aws-lambda-powertools[all]
-boto3
-botocore
-spotipy
+aws-lambda-powertools[all]>=3.8
+boto3>=1.37.0
+botocore>=1.37.0
+spotipy>=2.25.0
 pydantic>=2.0.0
-pytest
+pytest>=8.3.5
