--- a/template.yaml
+++ b/template.yaml
@@ -13,6 +13,11 @@ Globals:
         arn:aws:lambda:eu-west-2:017000801446:layer:AWSLambdaPowertoolsPythonV3-python312-x86_64:5
 
 Resources:
+  GigListHostedZone:
+    Type: AWS::Route53::HostedZone
+    Properties:
+      Name: giglist.rocks
+
   GigsTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Retain
