--- a/template.yaml
+++ b/template.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/awslabs/goformation/main/schema/cloudformation.schema.json
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: SAM Template for gig-playlists
@@ -11,6 +12,11 @@ Globals:
     Layers:
       - >-
         arn:aws:lambda:eu-west-2:017000801446:layer:AWSLambdaPowertoolsPythonV3-python312-x86_64:5
+
+Parameters:
+  GiglistCertificateARN:
+    Type: String
+    Default: arn:aws:acm:us-east-1:891376983144:certificate/3100c7d6-6a01-4773-bfb3-1efbd0958f54
 
 Resources:
   GigsTable:
@@ -426,7 +432,7 @@ Resources:
         Aliases:
           - www.giglist.rocks
         ViewerCertificate:
-          AcmCertificateArn: arn:aws:acm:us-east-1:891376983144:certificate/3100c7d6-6a01-4773-bfb3-1efbd0958f54
+          AcmCertificateArn: !Ref GiglistCertificateARN
           SslSupportMethod: sni-only
 
   CloudFrontOriginAccessControl:
@@ -445,6 +451,16 @@ Resources:
     Type: AWS::Route53::HostedZone
     Properties:
       Name: giglist.rocks
+
+  RootRecordSet:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref GigListHostedZone
+      Name: giglist.rocks.
+      Type: A
+      AliasTarget:
+        DNSName: !GetAtt CloudFrontDistribution.DomainName
+        HostedZoneId: Z2FDTNDATAQYW2 # Same for all CloudFront apps
 
   WwwRecordSet:
     Type: AWS::Route53::RecordSet
@@ -471,7 +487,21 @@ Resources:
         - AttributeDataType: String
           Name: preferred_username
           Required: true
+      UserPoolTier: ESSENTIALS
 
+  CognitoUserPoolClient:
+    Type: AWS::Cognito::UserPoolClient
+    Properties:
+      UserPoolId: !Ref CognitoUserPool
+      CallbackURLs:
+        - https://www.giglist.rocks
+      DefaultRedirectURI: https://www.giglist.rocks
+      SupportedIdentityProviders:
+        - COGNITO
+      AllowedOAuthScopes:
+        - openid
+      AllowedOAuthFlows:
+        - code
 
 Outputs:
   AddGigToUpcomingPlaylistFunctionArn:
