add logout redirect url

--- a/template.yaml
+++ b/template.yaml
@@ -511,6 +511,8 @@ Resources:
       CallbackURLs:
         - https://www.giglist.rocks
       DefaultRedirectURI: https://www.giglist.rocks
+      LogoutURLs:
+        - https://www.giglist.rocks
       SupportedIdentityProviders:
         - COGNITO
       AllowedOAuthFlowsUserPoolClient: true
