16 implement user access management (#45)

--- a/template.yaml
+++ b/template.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/awslabs/goformation/main/schema/cloudformation.schema.json
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: SAM Template for gig-playlists
@@ -11,6 +12,14 @@ Globals:
     Layers:
       - >-
         arn:aws:lambda:eu-west-2:017000801446:layer:AWSLambdaPowertoolsPythonV3-python312-x86_64:5
+
+Parameters:
+  GiglistRootCertificateARN:
+    Type: String
+    Default: arn:aws:acm:us-east-1:891376983144:certificate/3100c7d6-6a01-4773-bfb3-1efbd0958f54
+  GiglistAuthCertificateARN:
+    Type: String
+    Default: arn:aws:acm:us-east-1:891376983144:certificate/7f4174a3-ea6d-4c16-aa14-f22ed6821a91
 
 Resources:
   GigsTable:
@@ -426,7 +435,7 @@ Resources:
         Aliases:
           - www.giglist.rocks
         ViewerCertificate:
-          AcmCertificateArn: arn:aws:acm:us-east-1:891376983144:certificate/3100c7d6-6a01-4773-bfb3-1efbd0958f54
+          AcmCertificateArn: !Ref GiglistRootCertificateARN
           SslSupportMethod: sni-only
 
   CloudFrontOriginAccessControl:
@@ -446,6 +455,26 @@ Resources:
     Properties:
       Name: giglist.rocks
 
+  AuthRecordSet:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref GigListHostedZone
+      Name: auth.giglist.rocks.
+      Type: A
+      TTL: 300
+      ResourceRecords:
+        - 1.1.1.1 # Cognito needs a non-alias A record
+
+  TestAuthRecordSet:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref GigListHostedZone
+      Name: test.auth.giglist.rocks.
+      Type: A
+      AliasTarget:
+        DNSName: dhe9dk2tm3om7.cloudfront.net # FIXME: hard-coding?
+        HostedZoneId: Z2FDTNDATAQYW2 # Same for all CloudFront apps
+
   WwwRecordSet:
     Type: AWS::Route53::RecordSet
     Properties:
@@ -455,6 +484,52 @@ Resources:
       AliasTarget:
         DNSName: !GetAtt CloudFrontDistribution.DomainName
         HostedZoneId: Z2FDTNDATAQYW2 # Same for all CloudFront apps
+
+  CognitoUserPool:
+    Type: AWS::Cognito::UserPool
+    Properties:
+      Policies:
+        PasswordPolicy:
+          MinimumLength: 8
+      UsernameAttributes:
+        - email
+      Schema:
+        - AttributeDataType: String
+          Name: email
+          Required: true
+        - AttributeDataType: String
+          Name: preferred_username
+          Required: true
+      UserPoolTier: ESSENTIALS
+      AutoVerifiedAttributes:
+        - email
+
+  CognitoUserPoolClient:
+    Type: AWS::Cognito::UserPoolClient
+    Properties:
+      UserPoolId: !Ref CognitoUserPool
+      CallbackURLs:
+        - https://www.giglist.rocks
+        - http://localhost:4201
+      LogoutURLs:
+        - https://www.giglist.rocks
+        - http://localhost:4201
+      SupportedIdentityProviders:
+        - COGNITO
+      AllowedOAuthFlowsUserPoolClient: true
+      AllowedOAuthScopes:
+        - openid
+      AllowedOAuthFlows:
+        - code
+
+  CognitoUserPoolDomain:
+    Type: AWS::Cognito::UserPoolDomain
+    Properties:
+      UserPoolId: !Ref CognitoUserPool
+      Domain: "test.auth.giglist.rocks"
+      ManagedLoginVersion: "1"
+      CustomDomainConfig:
+        CertificateArn: !Ref GiglistAuthCertificateARN
 
 Outputs:
   AddGigToUpcomingPlaylistFunctionArn:
