add hosted zone and crud lambda

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -13,6 +13,7 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = [
     "Environment=dev",
     "ApiTokenArn=arn:aws:ssm:eu-west-2:891376983144:parameter/gigs/crud_api_token",
+    "GigsApiCertificateArn=arn:aws:acm:eu-west-2:891376983144:certificate/5c8e42bc-a39d-4575-ae10-c16d08037751",
     "GigsApiAllowedOrigins=*" # TODO: think this isn't getting picked up
 ]
 
@@ -25,5 +26,6 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = [
     "Environment=prod",
     "ApiTokenArn=arn:aws:ssm:eu-west-2:891376983144:parameter/gigs/crud_api_token",
+    "GigsApiCertificateArn=CREATEME",
     "GigsApiAllowedOrigins=https://app.giglist.rocks"
 ]
