--- a/template-refactored.yaml
+++ b/template-refactored.yaml
@@ -40,6 +40,32 @@ Globals:
         arn:aws:lambda:eu-west-2:017000801446:layer:AWSLambdaPowertoolsPythonV3-python312-x86_64:5
 
 Resources:
+  #######################
+  ##### Permissions #####
+  #######################
+
+  SchedulerRole:
+    Type: AWS::IAM::Role
+    Properties:
+      Description: Role for scheduling playlist delete lambda
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - scheduler.amazonaws.com
+            Action: "sts:AssumeRole"
+      Policies:
+        - PolicyName: InvokeRemoveGigFunction
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action: lambda:InvokeFunction
+                Resource: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+
+
   #########################
   ##### Site contents #####
   #########################
@@ -58,9 +84,26 @@ Resources:
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
 
-  ####################
-  ##### DynamoDB #####
-  ####################
+  #################################
+  ##### Frontend distribution #####
+  #################################
+
+  CloudFrontOriginAccessControl:
+    Type: AWS::CloudFront::OriginAccessControl
+    DependsOn:
+      - StaticSiteBucket
+    Properties:
+      OriginAccessControlConfig:
+        Description: Default Origin Access Control
+        Name: !Ref AWS::StackName
+        OriginAccessControlOriginType: s3
+        SigningBehavior: always
+        SigningProtocol: sigv4
+
+
+  #####################
+  ##### Databases #####
+  #####################
 
   GigsTable:
     Type: AWS::DynamoDB::Table
@@ -101,9 +144,9 @@ Resources:
       StreamSpecification:
         StreamViewType: NEW_AND_OLD_IMAGES
 
-  #######################
-  ##### API Gateway #####
-  #######################
+  ################
+  ##### APIs #####
+  ################
 
   GigsApi:
     Type: AWS::Serverless::HttpApi
@@ -166,26 +209,38 @@ Resources:
     Properties:
       Name: giglist.rocks
 
-  GigsApiCustomDomain:
-    Type: AWS::ApiGateway::DomainName
-    Properties:
-      DomainName: !Sub "${Environment}.giglist.rocks"
-      RegionalCertificateArn: !Ref GigsApiCertificateArn
-      EndpointConfiguration:
-        Types:
-          - REGIONAL
-
-  GigsApiBasePathMapping:
-    Type: AWS::ApiGateway::BasePathMapping
-    Properties:
-      DomainName: !Ref GigsApiCustomDomain
-      RestApiId: !Ref GigsApi
-      Stage: api
+# TODO: uncomment when certificate is validated
+#  GigsApiCustomDomain:
+#    Type: AWS::ApiGateway::DomainName
+#    Properties:
+#      DomainName: !Sub "${Environment}.giglist.rocks"
+#      # TODO: create this cert for other envs
+#      RegionalCertificateArn: !Ref GigsApiCertificateArn
+#      EndpointConfiguration:
+#        Types:
+#          - REGIONAL
+#
+#  GigsApiBasePathMapping:
+#    Type: AWS::ApiGateway::BasePathMapping
+#    Properties:
+#      DomainName: !Ref GigsApiCustomDomain
+#      RestApiId: !Ref GigsApi
+#      Stage: api
 
 
   ############################
   ##### Lambda functions #####
   ############################
+
+  SharedLibs:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: GigListSharedLibs
+      Description: Classes used across multiple Lambdas in the GigList project
+      ContentUri: libs/
+      CompatibleRuntimes:
+        - python3.12
+      RetentionPolicy: Retain
 
   GigsDbCRUD:
     Type: AWS::Serverless::Function
@@ -246,6 +301,150 @@ Resources:
             ApiId: !Ref GigsApi
             Path: /users/{id}/gigs
             Method: GET
-      EventInvokeConfig:
-        MaximumEventAgeInSeconds: 21600
-        MaximumRetryAttempts: 2
+
+  AddGigToUpcomingPlaylist:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "add-gig-to-upcoming-playlist-${Environment}"
+      CodeUri: functions/add_gig_to_upcoming_playlist/
+      Description: Updates upcoming playlist in response to gigs DynamoDB table updates
+      Environment:
+        Variables:
+          REMOVE_LAMBDA_ARN: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+          SCHEDULER_ROLE_ARN: !GetAtt SchedulerRole.Arn
+          TABLE_NAME: !Sub "gigs_${Environment}"
+      Policies:
+        - Statement:
+            - Sid: DynamoDBReadPolicy
+              Effect: Allow
+              Action:
+                - dynamodb:ListStreams
+                - dynamodb:DescribeStream
+                - dynamodb:GetShardIterator
+                - dynamodb:Query
+              Resource: !GetAtt GigsTable.Arn
+            - Sid: CloudWatchCreateLogsPolicy
+              Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:*"
+            - Sid: SSMWriteParameterPolicy
+              Effect: Allow
+              Action:
+                - ssm:GetParameters
+                - ssm:GetParameter
+                - ssm:DescribeParameters
+                - ssm:PutParameter
+              Resource:
+                - !Sub "arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/spotify/*"
+            - Sid: EventBridgeSchedulerCreatePolicy
+              Effect: Allow
+              Action:
+                - scheduler:CreateSchedule
+              Resource:
+                - !Sub "arn:${AWS::Partition}:scheduler:${AWS::Region}:${AWS::AccountId}:schedule/*"
+            - Sid: EventBridgeSchedulerPassRole
+              Effect: Allow
+              Action:
+                - iam:PassRole
+              Resource:
+                - !GetAtt SchedulerRole.Arn
+      Events:
+        Gigs:
+          Type: DynamoDB
+          Properties:
+            Stream: !GetAtt GigsTable.StreamArn
+            StartingPosition: LATEST
+            BatchSize: 10
+            FilterCriteria:
+              Filters:
+                - Pattern: '{ "eventName": ["INSERT", "MODIFY"], "dynamodb": { "Keys": { "id": { "S": [{ "prefix": "GIG" }] } } } }'
+      Layers:
+        - !Ref SharedLibs
+
+  RemoveGigFromUpcomingPlaylist:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "remove-gig-from-upcoming-playlist-${Environment}"
+      CodeUri: functions/remove_gig_from_upcoming_playlist/
+      Description: Removes tracks from upcoming playlist in response to scheduled events
+      Policies:
+        - Statement:
+            - Sid: DynamoDBReadPolicy
+              Effect: Allow
+              Action:
+                - dynamodb:Query
+                - dynamodb:GetItem
+              Resource: !GetAtt GigsTable.Arn
+            # TODO: can policies be shared between Spotify Lambda functions?
+            - Sid: CloudWatchCreateLogsPolicy
+              Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:*"
+            - Sid: SSMWriteParameterPolicy
+              Effect: Allow
+              Action:
+                - ssm:GetParameters
+                - ssm:GetParameter
+                - ssm:DescribeParameters
+                - ssm:PutParameter
+              Resource:
+                - !Sub "arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/spotify/*"
+      Layers:
+        - !Ref SharedLibs
+
+  UpcomingPlaylistRecon:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "upcoming-playlist-recon-${Environment}"
+      CodeUri: functions/upcoming_playlist_recon/
+      Description: Reconciles a user's upcoming playlist with the gigs database table
+      Environment:
+        Variables:
+          REMOVE_LAMBDA_ARN: !GetAtt RemoveGigFromUpcomingPlaylist.Arn
+          SCHEDULER_ROLE_ARN: !GetAtt SchedulerRole.Arn
+          TABLE_NAME: !Sub "gigs_${Environment}"
+      Policies:
+        - Statement:
+            - Sid: DynamoDBReadPolicy
+              Effect: Allow
+              Action:
+                - dynamodb:Query
+              Resource:
+                - !GetAtt GigsTable.Arn
+                - arn:aws:dynamodb:eu-west-2:891376983144:table/gigs/index/userId-date-index
+            - Sid: CloudWatchCreateLogsPolicy
+              Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:*"
+            - Sid: SSMWriteParameterPolicy
+              Effect: Allow
+              Action:
+                - ssm:GetParameters
+                - ssm:GetParameter
+                - ssm:DescribeParameters
+                - ssm:PutParameter
+              Resource:
+                - !Sub "arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/spotify/*"
+            - Sid: EventBridgeSchedulerCreatePolicy
+              Effect: Allow
+              Action:
+                - scheduler:CreateSchedule
+              Resource:
+                - !Sub "arn:${AWS::Partition}:scheduler:${AWS::Region}:${AWS::AccountId}:schedule/*"
+            - Sid: EventBridgeSchedulerPassRole
+              Effect: Allow
+              Action:
+                - iam:PassRole
+              Resource:
+                - !GetAtt SchedulerRole.Arn
+      Layers:
+        - !Ref SharedLibs
